--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <address>
       <a href="mailto:liuhanru@liuhanru-Inspiron-7572">liuhanru</a>
     </address>
-    <script src="./main.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
