--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>my page</title>
+    <script src="./vendor.bundle.js"></script>
   </head>
   <body>
     <h1>my page</h1>
@@ -9,6 +10,6 @@
     <address>
       <a href="mailto:liuhanru@liuhanru-Inspiron-7572">liuhanru</a>
     </address>
-    <script src="./bundle.js"></script>
+    <script src="./app.bundle.js"></script>
   </body>
 </html>
